--- a/BusBookingSystem/src/main/resources/application.properties
+++ b/BusBookingSystem/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+# Resources busses.json location
 busses.json.location=src/main/resources/busses.json
+
+# Localhost mongoDB uri
+spring.data.mongodb.uri=mongodb://localhost/busBookingAppDB
