Minor test updates

--- a/BusBookingSystem/src/main/resources/application.properties
+++ b/BusBookingSystem/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Resources busses.json location
 busses.json.location=src/main/resources/busses.json
+busses-test.json.location=src/main/resources/test-bus.json
 
 # Localhost mongoDB uri
 spring.data.mongodb.uri=mongodb://localhost/busBookingAppDB
