--- a/BusBookingSystem/src/main/resources/application.properties
+++ b/BusBookingSystem/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-# Resources busses.json location
-busses.json.location=src/main/resources/busses.json
-busses-test.json.location=src/main/resources/test-bus.json
+# Resources buses.json location
+buses.json.location=src/main/resources/buses.json
+buses-test.json.location=src/main/resources/test-bus.json
 
 # Localhost mongoDB uri
 spring.data.mongodb.uri=mongodb://localhost/busBookingAppDB
