--- a/BusBookingSystem/src/main/resources/application.properties
+++ b/BusBookingSystem/src/main/resources/application.properties
@@ -4,3 +4,13 @@ buses-test.json.location=src/main/resources/test-bus.json
 
 # Localhost mongoDB uri
 spring.data.mongodb.uri=mongodb://localhost/busBookingAppDB
+
+# Email properties
+mail.host=smtp.gmail.com
+mail.port=587
+mail.username=shvetsasia172@gmail.com
+mail.password=roby tsfj mitb yvni
+mail.transport.protocol=smtp
+mail.smtp.auth=true
+mail.smtp.starttls.enable=true
+mail.debug=true
