Added properties for mongoDB

--- a/BusBookingSystem/src/main/resources/application.properties
+++ b/BusBookingSystem/src/main/resources/application.properties
@@ -4,6 +4,10 @@ buses-test.json.location=src/main/resources/test-bus.json
 
 # Localhost mongoDB uri
 spring.data.mongodb.uri=mongodb://localhost/busBookingAppDB
+spring.data.mongodb.database=busBookingAppDB
+spring.data.mongodb.collections.bus=bus
+spring.data.mongodb.collections.ticket=ticket
+spring.data.mongodb.collections.user=user
 
 # Email properties
 mail.host=smtp.gmail.com
