Moved db to online cluster instead of local

--- a/BusBookingSystem/src/main/resources/application.properties
+++ b/BusBookingSystem/src/main/resources/application.properties
@@ -3,7 +3,8 @@ buses.json.location=src/main/resources/buses.json
 buses-test.json.location=src/main/resources/test-bus.json
 
 # Localhost mongoDB uri
-spring.data.mongodb.uri=mongodb://localhost/busBookingAppDB
+#spring.data.mongodb.uri=mongodb://localhost/busBookingAppDB
+spring.data.mongodb.uri=mongodb+srv://vshvets295:YbfQsgnXbjzVLoDJ@cluster0.uemkskn.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=busBookingAppDB
 spring.data.mongodb.collections.bus=bus
 spring.data.mongodb.collections.ticket=ticket
